Add dynamic test environment

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,11 +1,2 @@
-project(tlp-test)
-
-FILE(GLOB_RECURSE all_files
-*.cpp
-*.cc
-*.c++
-*.c
-*.C)
-
-add_executable(tlp-test ${all_files})
-target_link_libraries(tlp-test)
+add_subdirectory(static-test)
+add_subdirectory(dynamic-test)
